--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,12 @@
   box-sizing: border-box;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 [hidden] {
   display: none;
 }
@@ -103,9 +109,7 @@
 }
 
 .navigation__link {
-  display: inline-block;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding: 6px 0;
 
   letter-spacing: 0.02em;
   font-weight: 500;
@@ -128,11 +132,12 @@
 .navigation__link--active::after {
   content: "";
   position: absolute;
-  top: 51px;
   left: 0;
-  right: 0;
+  bottom: -27px;
 
   height: 4px;
+  width: 100%;
+
   border-radius: 2px;
   background-color: var(--main-color);
 }
@@ -243,7 +248,8 @@
 
   transition:
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -349,29 +355,23 @@
   line-height: 1;
 }
 
-.services__img {
-  display: block;
-}
-
-.item-services {
+.services__item {
   position: relative;
 }
 
-.item-services__title {
+.item-services__wrapper {
   position: absolute;
   left: 0;
-  right: 0;
   bottom: 0;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
 
-  margin: 0;
-  padding: 15px;
+  padding: 15px 25px;
 
-  min-height: 70px;
+  width: 100%;
+  height: 70px;
   overflow: hidden;
 
   font-weight: 700;
@@ -380,6 +380,14 @@
   color: var(--title-color);
 
   background-color: rgba(47, 48, 58, 0.8);
+}
+
+.item-services__title {
+  margin: 0;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 
@@ -467,7 +475,6 @@
   width: 44px;
   height: 44px;
 
-  outline: none;
   border-radius: 50%;
   color: var(--icons-color);
 
@@ -596,7 +603,6 @@
 
 .footer .social__link:hover,
 .footer .social__link:focus-visible {
-  outline: none;
   background-color: var(--main-color);
 }
 
@@ -691,15 +697,14 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
 
   display: flex;
   align-items: center;
 
   height: 294px;
+  width: 100%;
   overflow: hidden;
 
-  margin: 0;
   padding: 24px;
 
   text-align: left;
@@ -712,6 +717,10 @@
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card__text {
+  margin: 0;
 }
 
 .catalog .card:hover .card__description,
@@ -807,6 +816,10 @@
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+
+  transition:
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .popup:not(.is-hidden) .popup__body {
